# stereo_matching_python

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.sh
src/disparity_maps/: stereovision.py
src/disparity_maps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/disparity_maps/cython_modules/disparity_maps_cython/disparity_maps_manager/: setup.py
src/disparity_maps/cython_modules/disparity_maps_cython/disparity_maps_manager/disparity_map_56imgs/: disparityArray56Imgs.c  disparityArray56Imgs.pyx  setup.py
src/disparity_maps/cython_modules/disparity_maps_cython/disparity_maps_manager/disparity_map_man/: disparityArrayManager.c  disparityArrayManager.pyx
src/disparity_maps/cython_modules/disparity_maps_cython/disparity_maps_manager/disparity_map_sums/: disparityArraySum.c  (+2 more)
src/disparity_maps/cython_modules/disparity_maps_cython/img_analysis/: imageAnalysisManager.cpp  imageAnalysisManager.pyx  imageAnalysisManager_sum.cpp  imageAnalysisManager_sum.pyx  setup.py
src/disparity_maps/cython_modules/disparity_maps_cython/merge_dimensions/: mergeDimensions.cpp  mergeDimensions.pyx  setup.py
src/disparity_maps/cython_modules/disparity_maps_cython/reduce_array_dim/: mergeDimensions.cpp  mergeDimensions.pyx
src/disparity_maps/cython_modules/disparity_maps_cython/sampler/: sampling.c  sampling.pyx  setup.py
src/disparity_maps/cython_modules/disparity_maps_cython/sum_disparity_map/: setup.py
src/disparity_maps/dataset_tools/: h5Writer.py
src/disparity_maps/plot_image/: plot_4DArray.py
tests/: test_disparity_maps.py
(+15 files in other folders)
