[metadata]
name = disparity_maps
description = stereo algorithm for binocular images
author = Cristian Rodrigo Guarachi Ibanez
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    disparity_maps
install_requires =
    numpy==1.22.4
    opencv-python==4.5.5.64
    Pillow >= 8.4.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    opencv-python >==3.2.0

[options.package_data]
disparity_maps = py.typed

[flake8]
max-line-length = 160